<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Cronometro">

    <Button
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/baseline_arrow_back_black_18dp"
        android:backgroundTint="@color/naranja"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:background="@color/beige"/>

    <TextView
        android:id="@+id/titulo"
        style="@style/titulos"
        android:text="@string/contactoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.97">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gris_claro">

            <TextView
                style="@style/textoContent"
                android:paddingBottom="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/contactobody"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView2"
                style="@style/linkContent"
                android:textColor="@color/naranja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                style="@style/paisesContent"
                >

                <TextView
                    android:id="@+id/argentinaTitulo"
                    style="@style/paisesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ARGENTINA"
                    />

                <TextView
                    android:id="@+id/argentinaContenido"
                    style="@style/paisesTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/argentinaUbicaion"
                    android:visibility="gone"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                style="@style/paisesContent"
                >

                <TextView
                    android:id="@+id/chileTitulo"
                    style="@style/paisesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CHILE"
                    />

                <TextView
                    android:id="@+id/chileContenido"
                    style="@style/paisesTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chileUbicaion"
                    android:visibility="gone"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                style="@style/paisesContent"
                >

                <TextView
                    android:id="@+id/peruTitulo"
                    style="@style/paisesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PERÚ"
                    />

                <TextView
                    android:id="@+id/peruContenido"
                    style="@style/paisesTextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peruUbicaion"
                    android:visibility="gone"
                    />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scroll"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/subfondo">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gris"
            android:text="HOME"
            android:drawableTop="@drawable/home"
            android:background="@color/fondo" />
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gris"
            android:text="SETTINGS"
            android:drawableTop="@drawable/settings"
            android:background="@color/fondo"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>