<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Cronometro">

    <Button
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/baseline_arrow_back_black_18dp"
        android:backgroundTint="@color/naranja"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/titulo"
        style="@style/titulos"
        android:fontFamily="@font/roboto_black"
        android:text="@string/catalogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.97">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/acidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acidos"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/agentesPuenteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AGENTES DE PUENTEO"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/agentesSellos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AGENTES DE SELLOS"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/biocidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BIOCIDAS"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/coagulantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="COAGULANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/controladoresEspuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CONTROLADORES DE ESPUMA"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/controlaoresFiltrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acidos"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/densificantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DENSIFICANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/detergentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DETERGENTES / SURFACTANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/dispersantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DISPERSANTES / FLOCULANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/inhibidoresArcilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INHIBIDORES DE ARCILLA"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/inhibidoresCorrocion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INHIBIDORES DE CORROCIÓN"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/lubricantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LUBRICANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/obturantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OBTURANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/productosEspeciales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PRODUCTOS ESPECIALES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/productosCementacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PRODUCTO DE CEMENTACIÓN"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/reguladoresPh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGULADORES DE PH"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SALES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/viscosificantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VISCOSIFICANTES"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
            <Button
                android:id="@+id/sistemasEspecificos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SISTEMAS ESPECÍFICOS"
                android:layout_marginLeft="@dimen/margen"
                android:layout_marginRight="@dimen/margen"
                android:layout_marginTop="@dimen/margen"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scroll"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/subfondo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/visitanos"
            android:textAlignment="center"
            android:textColor="@color/gris"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/visitanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/maref"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>