<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Cronometro">

    <Button
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/baseline_arrow_back_black_18dp"
        android:backgroundTint="@color/naranja"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:background="@color/beige"/>

    <TextView
        android:id="@+id/titulo"
        style="@style/titulos"
        android:text="@string/configuracionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.97">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gris_claro">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                style="@style/paisesContent"
                >

                <TextView
                    android:id="@+id/ayudaTitulo"
                    style="@style/paisesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AYUDA"
                    />

                <LinearLayout
                    android:id="@+id/ayudaContenido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:background="@color/white"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1) Selecciona la opción 'cálculos' en la home de la App:"
                        style="@style/settingsTextContent"
                        android:background="@color/white"
                        />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ayuda_01" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2) Elije el cálculo que necesites de la lista:"
                        style="@style/settingsTextContent"
                        android:background="@color/white"
                        />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ayuda_02" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3) Ingresa los valores necesarios; en sistema decimal o imperial. Luego presiona el botón 'calcular' para obtener los resultados:"
                        style="@style/settingsTextContent"
                        android:background="@color/white"
                        />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ayuda_03"
                        android:layout_marginBottom="@dimen/margen"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                style="@style/paisesContent"
                >

                <TextView
                    android:id="@+id/actualizacionesTitulo"
                    style="@style/paisesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ACTUALIZACIONES"
                    />

                <LinearLayout
                    android:id="@+id/actualizacionesContenido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/margen"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/isotipo_actualizaciones"
                        style="@style/settingsTextContent"
                        android:layout_marginRight="@dimen/margenPeque"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MAREF \n\ Soporte de perforación \n\ drilling stand \n\ Versión 1.1.1 \n\ Octubre 2020"
                        style="@style/settingsTextContent"
                        android:padding="0dp"
                        android:layout_marginLeft="@dimen/margenPeque"
                        android:background="@color/white"
                        />




                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scroll"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/subfondo">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gris"
            android:text="HOME"
            android:drawableTop="@drawable/home"
            android:background="@color/fondo" />
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gris"
            android:text="SETTINGS"
            android:drawableTop="@drawable/settings"
            android:background="@color/fondo"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
